<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/thumb"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:placeholderImage="@drawable/ic_account"
        app:failureImage="@drawable/ic_account"
        app:failureImageScaleType="centerInside"
        app:roundAsCircle="true"
        app:roundingBorderColor="@color/blue400"
        app:roundingBorderWidth="4dp"
        app:roundingBorderPadding="2dp"
        fresco:roundedCornerRadius="5dp" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thumb"
        app:layout_constraintTop_toTopOf="@+id/thumb" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/type_phones"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/house_button"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_home"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/house_button"
            app:layout_constraintStart_toStartOf="@+id/house_button"
            app:layout_constraintTop_toBottomOf="@+id/house_button"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/cellphone_button"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cell"
            app:layout_constraintStart_toEndOf="@+id/house_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_cellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_cellphone"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cellphone_button"
            app:layout_constraintStart_toStartOf="@+id/cellphone_button"
            app:layout_constraintTop_toBottomOf="@+id/cellphone_button"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/office_button"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_work"
            app:layout_constraintStart_toEndOf="@+id/cellphone_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_office"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/office_button"
            app:layout_constraintStart_toStartOf="@+id/office_button"
            app:layout_constraintTop_toBottomOf="@+id/office_button"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/detail_button"
            android:layout_width="54dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_info"
            app:layout_constraintStart_toEndOf="@+id/office_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_detail"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/detail_button"
            app:layout_constraintStart_toStartOf="@+id/detail_button"
            app:layout_constraintTop_toBottomOf="@+id/detail_button"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>