<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iguanafix.jorgegonzalez.contacts.activities.ContactsDetail"
    tools:showIn="@layout/activity_contacts_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/thumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderImage="@drawable/ic_account"
            app:placeholderImageScaleType="fitXY"
            app:roundAsCircle="true"
            app:roundedCornerRadius="5dp"
            app:roundingBorderColor="@color/blue400"
            app:roundingBorderPadding="2dp"
            app:roundingBorderWidth="4dp" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/thumb"
            app:layout_constraintTop_toTopOf="@+id/thumb" />

        <TextView
            android:id="@+id/creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/thumb"
            app:layout_constraintTop_toBottomOf="@+id/contact_name" />

        <TextView
            android:id="@+id/title_phones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/phones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumb" />

        <TextView
            android:id="@+id/title_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_phones" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_birthday">

            <ImageView
                android:id="@+id/birth_date_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_birthday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birth_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/birth_date_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/birth_date_image"
                app:layout_constraintTop_toTopOf="@+id/birth_date_image" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/type_phones"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_phones">

            <ImageButton
                android:id="@+id/house_button"
                android:layout_width="54dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_home"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/house_button"
                app:layout_constraintStart_toStartOf="@+id/house_button"
                app:layout_constraintTop_toBottomOf="@+id/house_button"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/cellphone_button"
                android:layout_width="54dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cell"
                app:layout_constraintStart_toEndOf="@+id/house_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_cellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_cellphone"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cellphone_button"
                app:layout_constraintStart_toStartOf="@+id/cellphone_button"
                app:layout_constraintTop_toBottomOf="@+id/cellphone_button"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/office_button"
                android:layout_width="54dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_work"
                app:layout_constraintStart_toEndOf="@+id/cellphone_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_office"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/office_button"
                app:layout_constraintStart_toStartOf="@+id/office_button"
                app:layout_constraintTop_toBottomOf="@+id/office_button"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/title_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_date" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_address">

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/home_image"
                app:layout_constraintTop_toTopOf="@+id/home_image" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home"
            app:layout_constraintVertical_bias="0.00999999">

            <ImageView
                android:id="@+id/work_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_work"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/work_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/work_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/work_image"
                app:layout_constraintTop_toTopOf="@+id/work_image" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
